@@ -15,6 +15,8 @@
 - Windows native broker now responds to command line arguments.
 - Simplify client disconnecting so wills gets sent in all cases (bug #792468).
 - Clients now have a --quiet option.
+- The on_disconnect() callback will always be called now, even if the client
+  has disconnected unexpectedly.
 
 0.10.2 - 20110106
 =================
